<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
<PreferenceCategory android:title="@string/pref_title">
<com.mine.MineVibrationEnableCheckBoxPreference
    android:key="@string/pref_vibrate_enable_key"
    android:title="@string/pref_vibrate_enable_title" 
    android:summaryOn="@string/pref_vibrate_enable_summary_on" 
    android:summaryOff="@string/pref_vibrate_enable_summary_off">
</com.mine.MineVibrationEnableCheckBoxPreference>

<com.mine.CustomVibrateListPreference
    android:key="@string/pref_vibration_mode_key"
    android:title="@string/pref_vibration_mode_title"
    android:entries="@array/pref_vibration_mode_entries"
    android:entryValues="@array/pref_vibration_mode_entries"
    android:dialogTitle="@string/pref_vibration_mode_dialogTitle"
    android:defaultValue="@string/pref_vibration_mode_default"
    android:dependency="@string/pref_vibrate_enable_key"
>
</com.mine.CustomVibrateListPreference>

</PreferenceCategory>

<PreferenceCategory android:title="@string/pref_reminder_vibrate_catagory">
<com.mine.MineReminderEnableCheckBoxPreference  
    android:key="@string/pref_reminder_enable_key"
    android:title="@string/pref_reminder_enable_title"
>
</com.mine.MineReminderEnableCheckBoxPreference >

<!-- CheckBoxPreference 
    android:key="@string/pref_reminder_vibrate_enable_key"
    android:title="@string/pref_reminder_vibrate_enable_title"
    android:summaryOn="@string/pref_reminder_vibrate_enable_summary_on" 
    android:summaryOff="@string/pref_reminder_vibrate_enable_summary_off"
    android:dependency="@string/pref_vibrate_enable_key"
-->
<!--  /CheckBoxPreference -->

<com.mine.CustomVibrateListPreference
    android:key="@string/pref_reminder_vibration_mode_key"
    android:title="@string/pref_reminder_vibration_mode_title"
    android:entries="@array/pref_reminder_vibration_mode_entries"
    android:entryValues="@array/pref_reminder_vibration_mode_entries"
    android:dialogTitle="@string/pref_reminder_vibration_mode_dialogTitle"
    android:defaultValue="@string/pref_reminder_vibration_mode_default"
    android:dependency="@string/pref_reminder_enable_key"
    android:summary="@string/pref_reminder_vibrate_summary"
>
</com.mine.CustomVibrateListPreference>

<com.mine.MineReminderSoundCheckBoxPreference
    android:key="@string/pref_reminder_sound_enable_key"
    android:title="@string/pref_reminder_sound_enable_title"
    android:summaryOn="@string/pref_reminder_sound_enable_summary_on" 
    android:summaryOff="@string/pref_reminder_sound_enable_summary_off"
    android:dependency="@string/pref_reminder_enable_key"
>
</com.mine.MineReminderSoundCheckBoxPreference>

<RingtonePreference
    android:key="@string/pref_reminder_sound_key"
    android:title="@string/pref_reminder_sound_title"
    android:summary="@string/pref_reminder_sound_summary"
    android:ringtoneType="notification"
    android:showDefault="true"
    android:showSilent="true"
    android:dependency="@string/pref_reminder_sound_enable_key"
    android:defaultValue="content://settings/system/notification_sound" 
/>

<ListPreference
    android:key="@string/pref_reminder_interval_key"
    android:title="@string/pref_reminder_interval_title"
    android:entries="@array/pref_reminder_interval_entries"
    android:entryValues="@array/pref_reminder_interval_entries"
    android:dialogTitle="@string/pref_reminder_interval_dialogTitle"
    android:defaultValue="@string/pref_reminder_interval_default"
    android:dependency="@string/pref_reminder_enable_key"
>
</ListPreference>

<CheckBoxPreference
    android:key="@string/pref_reminder_bedtime_enable_key"
    android:title="@string/pref_reminder_bedtime_title"
    android:summary="@string/pref_reminder_bedtime_summary"
    android:dependency="@string/pref_reminder_enable_key"
/>

<com.mine.MineTimePickerPreference
    android:key="@string/pref_reminder_bedtime_time"
    android:title="@string/pref_reminder_bedtime_time_title"
    android:dialogLayout="@layout/bedtimelayout"
    android:dependency="@string/pref_reminder_bedtime_enable_key"
/>

<CheckBoxPreference 
    android:key="@string/pref_reminder_wakelock_enable_key"
    android:title="@string/pref_reminder_wakelock_enable_title"
    android:summaryOn="@string/pref_reminder_wakelock_enable_summary_on" 
    android:summaryOff="@string/pref_reminder_wakelock_enable_summary_off"
    android:dependency="@string/pref_reminder_enable_key"
/>

</PreferenceCategory>


<PreferenceCategory android:title="@string/pref_reminder_items_catagory">
<com.mine.MineReminderMissedPhoneCallCheckbox
	android:key="@string/pref_reminder_item_missed_call_key"
	android:title="@string/pref_reminder_item_missed_call_title"
	android:summary="@string/pref_reminder_item_missed_call_summary"
	android:dependency="@string/pref_reminder_enable_key"
/>
<com.mine.MineReminderMissedPhoneCallCheckbox
    android:key="@string/pref_reminder_item_unread_gmail_key"
    android:title="@string/pref_reminder_item_unread_gmail_title"
    android:summary="@string/pref_reminder_item_unread_gmail_summary"
    android:dependency="@string/pref_reminder_enable_key"
/>
</PreferenceCategory>


<PreferenceCategory android:title="@string/pref_misc_catagory">

<com.mine.MineAppAutoEnableCheckbox 
    android:key="@string/pref_app_auto_enable_key"
    android:title="@string/pref_app_auto_enable_title"
    android:summaryOn="@string/pref_app_auto_enable_summary_on" 
    android:summaryOff="@string/pref_app_auto_enable_summary_off"
/>

<com.mine.MineDonateDialog
    android:title="@string/pref_donate_title"
	android:dialogTitle="@string/pref_donate_dialog_title"
	android:negativeButtonText="@string/pref_donate_no_button"
	android:positiveButtonText="@string/pref_donate_yes_button"
	android:dialogMessage="@string/pref_donate_message"
	android:summary="@string/pref_donate_summary"
/>

<com.mine.MineFeedbackPreference
    android:title="@string/pref_email_title"
    android:summary="@string/pref_email_summary"
/>

</PreferenceCategory>
</PreferenceScreen>