<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/oauth_note"/>

    <Button
        android:id="@+id/oauth_note_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oauth_note_ok"></Button>

    <Button
        android:id="@+id/oauth_note_ko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oauth_note_ko"></Button>

</LinearLayout>